--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "dependencies": {
     "encodeurl": "~1.0.2",
     "escape-html": "~1.0.3",
-    "get-port": "^5.1.1",
     "parseurl": "~1.3.2",
+    "portfinder": "^1.0.26",
     "send": "0.16.2",
     "sync-request": "^6.0.0",
     "through2": "^3.0.0"
