--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "del": "^5.1.0",
     "encodeurl": "~1.0.2",
     "escape-html": "~1.0.3",
+    "fastdomparse-node": "^1.0.0",
     "parseurl": "~1.3.2",
     "portfinder": "^1.0.26",
     "send": "0.16.2",
